src/test/compile-fail/main-wrong-type.rs
fn main(foo: {x: int, y: int}) {
//!^ ERROR wrong type in main function: found `native fn(&&{x: int,y: int})`
}
